trybuild-qcell/src/compiletest/lcell-03.stderr
error[E0495]: cannot infer an appropriate lifetime for lifetime parameter `'id` due to conflicting requirements
  --> src/compiletest/lcell-03.rs:9:37
   |
9  |             let c1 = Rc::new(owner1.cell(100u32));
   |                                     ^^^^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #1 defined here...
  --> src/compiletest/lcell-03.rs:8:27
   |
8  |           LCellOwner::scope(|mut owner2| {
   |  ___________________________^
9  | |             let c1 = Rc::new(owner1.cell(100u32));
10 | |             let c1mutref2 = owner2.rw(&c1);    // Compile error
11 | |             println!("{}", *c1mutref2);
12 | |         });
   | |_________^
note: ...so that the types are compatible
  --> src/compiletest/lcell-03.rs:10:36
   |
10 |             let c1mutref2 = owner2.rw(&c1);    // Compile error
   |                                    ^^
   = note: expected `&mut LCellOwner<'_>`
              found `&mut LCellOwner<'_>`
note: but, the lifetime must be valid for the anonymous lifetime #1 defined here...
  --> src/compiletest/lcell-03.rs:7:23
   |
7  |       LCellOwner::scope(|mut owner1| {
   |  _______________________^
8  | |         LCellOwner::scope(|mut owner2| {
9  | |             let c1 = Rc::new(owner1.cell(100u32));
10 | |             let c1mutref2 = owner2.rw(&c1);    // Compile error
11 | |             println!("{}", *c1mutref2);
12 | |         });
13 | |     });
   | |_____^
note: ...so that the types are compatible
  --> src/compiletest/lcell-03.rs:9:37
   |
9  |             let c1 = Rc::new(owner1.cell(100u32));
   |                                     ^^^^
   = note: expected `&LCellOwner<'_>`
              found `&LCellOwner<'_>`
